added application.properties and swagger configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,37 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#Data Source Properties
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mjt?allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
+spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=utf-8;
+spring.datasource.username=root
+spring.datasource.password=root
 
-spring.jpa.hibernate.use-new-id-generator-mappings=false
+#JPA Properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=TRUE
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mjt
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#Show SQL executed with parameter bindings
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor=TRACE
+#
+##JPA-SCHEMA_GENERATOR
+##Used to generate ddl based on entity model
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
 
-spring.jpa.show-sql=true
 
-#server.servlet.context-path=/api
+cars.standard.one.beginDate=1993
+cars.standard.one.endDate=1997
+cars.standard.two.beginDate=1997
+cars.standard.two.endDate=2001
+cars.standard.three.beginDate=2001
+cars.standard.three.endDate=2006
+cars.standard.four.beginDate=2006
+cars.standard.four.endDate=2011
+cars.standard.five.beginDate=2011
+cars.standard.five.endDate=2015
+cars.standard.six.beginDate=2015
+cars.standard.six.endDate=2025
+
