--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,17 +4,17 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mjt?allowPublicKeyRetrieval=tr
 spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=utf-8;
 spring.datasource.username=root
 spring.datasource.password=root
-
+#
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=TRUE
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
-
-#Show SQL executed with parameter bindings
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor=TRACE
 #
+##Show SQL executed with parameter bindings
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor=TRACE
+##
 ##JPA-SCHEMA_GENERATOR
 ##Used to generate ddl based on entity model
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
